# ngenix-test-task

./: .dockerignore  .gitattributes  .gitignore  .hadolint.yml  .pre-commit-config.yml  .yamllint.yml  Dockerfile  Makefile  README.md  csv.stats  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini  xml.stats
.github/workflows/: python-wheel.yml
random_xml_csv/: __main__.py  cli.py  csv.py  defaults.py  xml.py
tests/: test_random_xml.py  test_xml2csv.py
